--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-German M. Bravo (Kronuz)
+German M. Bravo (Kronuz)  <german.mb@deipi.com>
+José Madrigal Cárdenas (YosefMac)  <mac.yosef@gmail.com>
+José María Valencia (JoseMariaVR)  <chem_valencia@hotmail.com>
+Bryan Eduardo (bryaneduardo24)  <bryaneduardo24@gmail.com>
