--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 German M. Bravo (Kronuz)  <german.mb@deipi.com>
 José Madrigal Cárdenas (YosefMac)  <mac.yosef@gmail.com>
 José María Valencia Ramírez (JoseMariaVR)  <chem_valencia@hotmail.com>
-Bryan Eduardo (bryaneduardo24)  <bryaneduardo24@gmail.com>
+Bryan Eduardo Martinez Guzman (bryaneduardo24)  <bryaneduardo24@gmail.com>
