Fix troff syntax

--- a/man/xapiand.8
+++ b/man/xapiand.8
@@ -114,7 +114,7 @@ Number of worker servers.
 Maximum number of databases in database pool.
 .It Fl Fl replicators Ar replicators
 Number of replicators.
-It Fl Fl committers Ar committers
+.It Fl Fl committers Ar committers
 Number of committers.
 .Sh FILES
 .Sh EXIT STATUS
